fix: Fix responsiveness issue of modal on iphone 15

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -452,7 +452,7 @@ html {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100svh;
+  height: 100vh;
   background-color: #020202;
   z-index: 10;
   padding: var(--gutter-width);
